<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/sign_up_txtv"/>

    <EditText
        android:id="@+id/email"
        android:layout_marginTop="10dp"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/pwd"
        android:layout_marginTop="10dp"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/pwd"/>

    <EditText
        android:id="@+id/pwdConfirm"
        android:layout_marginTop="10dp"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/pwd_confirm"/>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_marginTop="20dp"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up_txtv" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_marginTop="20dp"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_in_txtv"/>

</LinearLayout>
